WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202086
[CURL] CurlRequest does not need a sessionID
https://bugs.webkit.org/show_bug.cgi?id=202086
Summary
[CURL] CurlRequest does not need a sessionID
Chris Dumez
Reported
2019-09-21 19:50:02 PDT
CurlRequest does not need a sessionID.
Attachments
Patch
(6.92 KB, patch)
2019-09-21 19:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-21 19:50:55 PDT
Created
attachment 379334
[details]
Patch
Chris Dumez
Comment 2
2019-09-21 22:15:48 PDT
Comment on
attachment 379334
[details]
Patch Clearing flags on attachment: 379334 Committed
r250192
: <
https://trac.webkit.org/changeset/250192
>
Chris Dumez
Comment 3
2019-09-21 22:15:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-09-21 22:16:18 PDT
<
rdar://problem/55596677
>
Brent Fulgham
Comment 5
2019-09-23 10:52:19 PDT
This introduced a WinCairo build failure. I will check in a fix.
Brent Fulgham
Comment 6
2019-09-23 10:54:14 PDT
Build fix: Commited
r250241
: <
https://trac.webkit.org/changeset/250241
>
Chris Dumez
Comment 7
2019-09-23 11:16:35 PDT
(In reply to Brent Fulgham from
comment #6
)
> Build fix: > > Commited
r250241
: <
https://trac.webkit.org/changeset/250241
>
Thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug