[CURL] CurlRequest does not need a sessionID https://bugs.webkit.org/show_bug.cgi?id=202086

Reviewed by Alex Christensen.

* platform/network/curl/CurlFormDataStream.cpp:
(WebCore::CurlFormDataStream::CurlFormDataStream):
* platform/network/curl/CurlFormDataStream.h:
* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::CurlRequest):
* platform/network/curl/CurlRequest.h:
(WebCore::CurlRequest::create):
* platform/network/curl/ResourceHandleCurl.cpp:
(WebCore::ResourceHandle::createCurlRequest):

Canonical link: https://commits.webkit.org/215689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250192 268f45cc-cd09-0410-ab3c-d52691b4dbfc