Source/WebCore/platform/network/curl/CurlFormDataStream.h
@@ -34,7 +34,7 @@ namespace WebCore {
 
 class CurlFormDataStream {
 public:
-    CurlFormDataStream(const FormData*, PAL::SessionID);
+    explicit CurlFormDataStream(const FormData*);
     WEBCORE_EXPORT ~CurlFormDataStream();
 
     void clean();
@@ -54,7 +54,6 @@ private:
     Optional<size_t> readFromFile(const FormDataElement::EncodedFileData&, char*, size_t);
     Optional<size_t> readFromData(const Vector<char>&, char*, size_t);
 
-    PAL::SessionID m_sessionID;
     RefPtr<FormData> m_formData;
 
     std::unique_ptr<Vector<char>> m_postData;
